# CanadianTracker

./: .flake8  README.rst  alembic.ini  pyproject.toml
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 4e2a96338a6c_add_product_sku.py  8fe398b58b5f_products_static_add_product_url.py  9169a7c5bda3_add_skus_table.py  ac4b7897c153_create_initial_tables.py  ac8256c291d4_change_price_column_type_to_int.py  d3f6991d4671_add_index_to_samples.py
src/canadiantracker/: __init__.py  cli.py  cli_utils.py  ctapi.py  http.py  model.py  query.py  scraper.py  server.py  storage.py  triangle.py
src/canadiantracker/web/: package-lock.json  package.json  webpack.config.js
src/canadiantracker/web-svelte/: index.html  package-lock.json  package.json  vite.config.ts
src/canadiantracker/web-svelte/src/: App.svelte  app.css
src/canadiantracker/web-svelte/src/lib/api/: client.ts  types.ts
src/canadiantracker/web-svelte/src/lib/components/: ProductCard.svelte  SearchBox.svelte  Sparkline.svelte
src/canadiantracker/web-svelte/src/routes/: Home.svelte  SkuDetail.svelte
src/canadiantracker/web/src/: index.ts  sku.ts
src/canadiantracker/web/templates/: index.html  libs.html  product.html  sku.html
tests/: test_canadiantracker.py  test_repository.py
