[tool.poetry]
name = "canadiantracker"
version = "0.1.0"
description = ""
authors = ["Jérémie Galarneau <jeremie.galarneau@gmail.com>"]
include = ["src/canadiantracker/web/dist/*"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
requests = "^2.26.0"
SQLAlchemy = "^1.4.29"
fake-useragent = "^0.1.11"
plotext = "^4.2.0"
uvicorn = "^0.17.6"
fastapi = "^0.75.0"
python-dotenv = "^0.19.2"
Jinja2 = "^3.1.2"
traceback-with-variables = "^2.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
alembic = "^1.7.7"
black = {version = "^22.3.0", allow-prereleases = true}
flake8 = "^5.0.4"
flake8-annotations = "^2.9.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ctscraper = "canadiantracker.scraper:cli"
ctquery = "canadiantracker.query:cli"
ctserver = "canadiantracker.server:cli"

[tool.isort]
profile = "black"
