[tool.poetry]
name = "canadiantracker"
version = "0.1.0"
description = ""
authors = ["Jérémie Galarneau <jeremie.galarneau@gmail.com>"]
include = ["src/canadiantracker/web/dist/*"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.3.1"
requests = "^2.32.5"
SQLAlchemy = "^2.0.44"
plotext = "^5.3.2"
uvicorn = "^0.38.0"
fastapi = "^0.121.2"
python-dotenv = "^1.2.1"
Jinja2 = "^3.1.6"
traceback-with-variables = "^2.2.1"
latest-user-agents = "^0.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
alembic = "^1.17.2"
black = "^25.11.0"
flake8 = "^7.3.0"
flake8-annotations = "^3.2.0"
isort = "^7.0.0"
pyright = "^1.1.407"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ctscraper = "canadiantracker.scraper:cli"
ctquery = "canadiantracker.query:cli"
ctserver = "canadiantracker.server:cli"

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "basic"
